# hub

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
.agents/plugins/: marketplace.json
docs/: mcp-claude-code.md  security.md  tailscale.md
hub/: __init__.py  auth.py  bootstrap.py  cli.py  config.py  constants.py  db.py  main.py  mcp_agents.py  models.py  owner.py  paths.py  report_html.py  storage.py  tailscale_serve.py
hub/routes/: __init__.py  api.py  web.py
hub/static/: styles.css
hub/templates/: artifact.html  base.html  dashboard.html
hub/templates/partials/: artifact_list.html  artifact_row.html
hub_mcp/: __init__.py  server.py
plugins/hub/: .mcp.json
plugins/hub/.codex-plugin/: plugin.json
plugins/hub/skills/hub-publish/: SKILL.md
scripts/: setup.sh  simulate-agent-setup.sh  tailscale-serve.sh
skills/hub-publish/: SKILL.md  template.html
tests/: conftest.py  test_api.py  test_auth.py  test_bootstrap.py  test_mcp.py  test_mcp_agents.py  test_owner.py  test_report_html.py  test_server_mode.py  test_tailscale_serve.py
