[project]
name = "hub"
version = "0.1.0"
description = "Self-hosted report inbox for AI coding agents, secured by Tailscale"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic-settings>=2.6.0",
    "jinja2>=3.1.0",
    "httpx>=0.28.0",
    "fastmcp>=2.0.0",
    "nanoid>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
]

[project.scripts]
hub = "hub.main:cli"
hub-mcp = "hub_mcp.server:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["hub", "hub_mcp"]

[tool.hatch.build.targets.wheel.force-include]
"hub/templates" = "hub/templates"
"hub/static" = "hub/static"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]